deploy: ed722d7db7c231eaf294f04f802389c1417c1287

--- a/_static/sphinx-book-theme.scss
+++ b/_static/sphinx-book-theme.scss
@@ -637,8 +637,11 @@ button.topbarbtn img {
     }
 
     // Captions
-    p.caption {
+    li + li.navbar-special {
         margin-top: 1em;
+    }
+
+    p.margin-caption {
         margin-bottom: 0;
         font-size: 1.2em;
     }
@@ -714,45 +717,26 @@ nav.bd-links {
     margin-left: 0px;
     max-height: none !important;
 
-    p.caption {
-        font-size: 1.4em;
-
-        &:first-child {
-            margin-top: 0;
-        }
-    }
-
-    ul {
-        list-style: none;
-    }
-
-    li {
+    ul.nav li {
         width: 100%;
     }
 
-    li.toctree-l1 {
+    ul.sidenav_l1 > li {
         font-size: 1.2em
     }
 
-    li.toctree-l2, li.toctree-l3, li.toctree-l4, li.toctree-l5  {
+    ul.sidenav_l2  {
         font-size: .8em
     }
 
-    > ul.nav {
-        // Make sure the first items don't have any padding
-        padding-left: 0px !important;
+    ul.nav > li > a {
+        padding-left: 0rem !important;
+        padding-right: 0rem !important;
+    }
 
-        // Subsequent items should have padding
-        ul {
-            padding-left: 1rem !important;
-            padding-right: 0rem !important;
-        }
-
-        // Links don't have the padding, uls do
-        a {
-            padding-left: 0rem !important;
-            padding-right: 0rem !important;
-        }
+    ul.nav ul {
+        padding-left: 1rem !important;
+        padding-right: 0rem !important;
     }
 }
 
