--- a/_static/sphinx-book-theme.css
+++ b/_static/sphinx-book-theme.css
@@ -364,8 +364,9 @@ button.topbarbtn img {
     overflow: hidden;
     position: relative;
     padding-top: 0; }
-  .bd-sidebar p.caption {
-    margin-top: 1em;
+  .bd-sidebar li + li.navbar-special {
+    margin-top: 1em; }
+  .bd-sidebar p.margin-caption {
     margin-bottom: 0;
     font-size: 1.2em; }
   .bd-sidebar li > a > i {
@@ -416,26 +417,18 @@ div.navbar-brand-box a.navbar-brand {
 nav.bd-links {
   margin-left: 0px;
   max-height: none !important; }
-  nav.bd-links p.caption {
-    font-size: 1.4em; }
-    nav.bd-links p.caption:first-child {
-      margin-top: 0; }
-  nav.bd-links ul {
-    list-style: none; }
-  nav.bd-links li {
+  nav.bd-links ul.nav li {
     width: 100%; }
-  nav.bd-links li.toctree-l1 {
+  nav.bd-links ul.sidenav_l1 > li {
     font-size: 1.2em; }
-  nav.bd-links li.toctree-l2, nav.bd-links li.toctree-l3, nav.bd-links li.toctree-l4, nav.bd-links li.toctree-l5 {
+  nav.bd-links ul.sidenav_l2 {
     font-size: .8em; }
-  nav.bd-links > ul.nav {
-    padding-left: 0px !important; }
-    nav.bd-links > ul.nav ul {
-      padding-left: 1rem !important;
-      padding-right: 0rem !important; }
-    nav.bd-links > ul.nav a {
-      padding-left: 0rem !important;
-      padding-right: 0rem !important; }
+  nav.bd-links ul.nav > li > a {
+    padding-left: 0rem !important;
+    padding-right: 0rem !important; }
+  nav.bd-links ul.nav ul {
+    padding-left: 1rem !important;
+    padding-right: 0rem !important; }
 
 @media (min-width: 768px) {
   .bd-sidebar, .bd-topbar-whitespace {
