add toto and pope to custom.css

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -80,3 +80,10 @@
   background-color: #00c5cd;
 }
 
+.module-pope {
+  background-color: #ff0000;
+}
+
+.module-toto {
+  background-color: #008080;
+}
