--- a/_static/custom.css
+++ b/_static/custom.css
@@ -12,78 +12,334 @@
   margin-bottom: 0.6em;
 }
 
+.module-dynep {
+  background-color: #FF0000;
+}
+
+.module-strat1 {
+  background-color: #FF6400;
+}
+
+.module-gmat {
+  background-color: #FFA600;
+}
+
+.module-prog {
+  background-color: #FFF300;
+}
+
+.module-mfg {
+  background-color: #5DFF00;
+}
+
 .module-mm1 {
-  background-color: #009fff;
+  background-color: #00FFAE;
+}
+
+.module-cfg {
+  background-color: #00FFFB;
+}
+
+.module-ltg {
+  background-color: #00D4FF;
+}
+
+.module-dte {
+  background-color: #00A6FF;
+}
+
+.module-lodt {
+  background-color: #0068FF;
+}
+
+.module-gitf {
+  background-color: #000CFF;
+}
+
+.module-phyp {
+  background-color: #8300FF;
+}
+
+.module-surp {
+  background-color: #C900FF;
+}
+
+.module-vip {
+  background-color: #FF00F7;
 }
 
 .module-mm2 {
-  background-color: #0078ff;
+  background-color: #FF008B;
+}
+
+.module-exstat {
+  background-color: #C80000;
+}
+
+.module-graph {
+  background-color: #C86100;
+}
+
+.module-fieldsk {
+  background-color: #C88E00;
+}
+
+.module-ssg {
+  background-color: #C8BC00;
+}
+
+.module-htg {
+  background-color: #00C809;
+}
+
+.module-maps {
+  background-color: #7FC800;
+}
+
+.module-puregp {
+  background-color: #00C8A1;
+}
+
+.module-appgp {
+  background-color: #00C87C;
+}
+
+.module-rsitf {
+  background-color: #009EC8;
+}
+
+.module-fieldgp {
+  background-color: #006DC8;
+}
+
+.module-igg {
+  background-color: #0043C8;
+}
+
+.module-metg {
+  background-color: #2400C8;
+}
+
+.module-sedi {
+  background-color: #7C00C8;
+}
+
+.module-strat2 {
+  background-color: #C800C2;
+}
+
+.module-rsep {
+  background-color: #C80082;
+}
+
+.module-rsep {
+  background-color: #C80082;
 }
 
 .module-mse1 {
-  background-color: #023e8a;
+  background-color: #C80046;
 }
 
 .module-mse2 {
-  background-color: #023e8a;
-}
-
-.module-dynep {
-  background-color: #e76f51;
-}
-
-.module-progr {
-  background-color:     #ff9c59;
-}
-
-.module-rs {
-  background-color: #ba9bfa;
-}
-
-.module-advrs {
-  background-color: #8c70c4;
-}
-
-.module-seism {
-  background-color: #1f3324;
-}
-
-.module-nm {
-  background-color: #ff7e26;
-}
-
-.module-igp {
-  background-color: #54b27e;
-}
-
-.module-fieldgps {
-  background-color: #427659    ;
-}
-
-.module-geoinv {
-  background-color: #011f4b;
-}
-
-.module-gmod {
-  background-color: #f9717f;
-}
-
-.module-geodyn {
-  background-color: #d25276;
+  background-color: #9E0000;
 }
 
 .module-mech {
-  background-color: #197278;
+  background-color: #9E5900;
 }
 
-.module-gfdoceans {
-  background-color: #00c5cd;
+.module-wave {
+  background-color: #9E9C00;
 }
 
-.module-pope {
-  background-color: #ff0000;
+.module-egacr {
+  background-color: #679E00;
+}
+
+.module-pala {
+  background-color: #009E8B;
+}
+
+.module-om {
+  background-color: #007A9E;
+}
+
+.module-seis {
+  background-color: #00419E;
+}
+
+.module-nm {
+  background-color: #059E00;
+}
+
+.module-resource {
+  background-color: #05009E;
+}
+
+.module-indpmap {
+  background-color: #51009E;
+}
+
+.module-indpgp {
+  background-color: #9E0099;
+}
+
+.module-indpes {
+  background-color: #9E0048;
+}
+
+.module-indpls {
+  background-color: #5C0000;
+}
+
+.module-ct {
+  background-color: #585C00;
+}
+
+.module-clim {
+  background-color: #0F5C00;
+}
+
+.module-nssi {
+  background-color: #00585C;
+}
+
+.module-ars {
+  background-color: #001A5C;
+}
+
+.module-iafg {
+  background-color: #5B005C;
+}
+
+.module-ored {
+  background-color: #FF4242;
+}
+
+.module-mem {
+  background-color: #FF8A42;
+}
+
+.module-envsemi {
+  background-color: #FFC342;
+}
+
+.module-astbio {
+  background-color: #FFF942;
+}
+
+.module-esys {
+  background-color: #BDFF42;
+}
+
+.module-gace {
+  background-color: #78FF42;
+}
+
+.module-advprog {
+  background-color: #42FF64;
+}
+
+.module-gmod {
+  background-color: #42FFBA;
+}
+
+.module-psdp {
+  background-color: #42FFFC;
+}
+
+.module-plasur {
+  background-color: #42DDFF;
 }
 
 .module-toto {
-  background-color: #008080;
+  background-color: #42BAFF;
+}
+
+.module-aag {
+  background-color: #429BFF;
+}
+
+.module-hff {
+  background-color: #4273FF;
+}
+
+.module-gfdocean {
+  background-color: #4842FF;
+}
+
+.module-mgae {
+  background-color: #8142FF;
+}
+
+.module-cps {
+  background-color: #B242FF;
+}
+
+.module-dsml {
+  background-color: #F142FF;
+}
+
+.module-ghaz {
+  background-color: #FF42D4;
+}
+
+.module-ageomo {
+  background-color: #FF428A;
+}
+
+.module-minep {
+  background-color: #FF6B6B;
+}
+
+.module-aes {
+  background-color: #FFA16B;
+}
+
+.module-fgamb {
+  background-color: #FFC76B;
+}
+
+.module-ginv {
+  background-color: #A2FF66;
+}
+
+.module-gdyn {
+  background-color: #66FF74;
+}
+
+.module-cac {
+  background-color: #66FFBE;
+}
+
+.module-ampap {
+  background-color: #66FFF3;
+}
+
+.module-grt {
+  background-color: #66E1FF;
+}
+
+.module-palabio {
+  background-color: #66B5FF;
+}
+
+.module-palaocean {
+  background-color: #6692FF;
+}
+
+.module-gagp {
+  background-color: #6866FF;
+}
+
+.module-plaphy {
+  background-color: #AC66FF;
+}
+
+.module-plachem {
+  background-color: #E866FF;
+}
+
+.module-meteo {
+  background-color: #FF66DA;
 }
